--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "axios": "^1.7.7",
         "dayjs": "^1.11.13",
         "formik": "^2.4.6",
+        "imask": "^7.6.1",
         "notistack": "^3.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-imask": "^7.6.1",
         "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
