--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@mui/x-data-grid": "^7.21.0",
         "@mui/x-date-pickers": "^7.22.0",
         "@react-oauth/google": "^0.12.1",
+        "@stripe/react-stripe-js": "^2.8.1",
+        "@stripe/stripe-js": "^4.9.0",
         "@tanstack/react-query": "^5.59.16",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
