--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@stripe/react-stripe-js": "^2.8.1",
         "@stripe/stripe-js": "^4.9.0",
         "@tanstack/react-query": "^5.59.16",
+        "@tanstack/react-query-devtools": "^5.60.6",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
