--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "dayjs": "^1.11.13",
         "formik": "^2.4.6",
         "imask": "^7.6.1",
+        "jwt-decode": "^4.0.0",
         "notistack": "^3.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
