--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-imask": "^7.6.1",
         "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
+        "react-signature-canvas": "^1.0.6",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4",
         "yup": "^1.4.0"
@@ -60,5 +61,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-signature-canvas": "^1.0.6"
     }
 }
