Add types to fix build

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/node": "^16.18.115",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@types/react-signature-canvas": "^1.0.6",
         "axios": "^1.7.7",
         "dayjs": "^1.11.13",
         "formik": "^2.4.6",
@@ -62,8 +63,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "@types/react-signature-canvas": "^1.0.6"
     }
 }
