--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "web-vitals": "^2.1.4",
         "yup": "^1.4.0"
     },
+    "homepage": "/theory",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
