--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -28,7 +28,7 @@ FROM nginx:1.27.2 as production
 
 COPY ./docker/app/nginx.conf /etc/nginx/conf.d/default.conf
 
-RUN mkdir /var/www/theory
+RUN mkdir -p /var/www/theory
 
 COPY --from=build-stage /app/build /var/www/theory
 
