--- a/docker/app/nginx.conf
+++ b/docker/app/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # Force all paths to load either itself (js files) or go through index.html.
     location /index.html {
-        try_files $uri /index.html;
+        try_files $uri /theory/index.html;
 
         add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
