--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ REACT_APP_API_URL=http://localhost:8001/api
 #REACT_APP_AMPLITUDE_API_KEY=1181f86d518cc71a8809cd4f6db6325d
 #REACT_APP_DEFAULT_COMPANY_ID=22
 REACT_APP_DEFAULT_COMPANY_ID=15
+ANGULAR_CLIENT_URL=http://localhost:4200
