--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@mui/x-data-grid": "^7.21.0",
         "@mui/x-date-pickers": "^7.22.0",
         "@react-oauth/google": "^0.12.1",
+        "@sentry/react": "^8.40.0",
         "@stripe/react-stripe-js": "^2.8.1",
         "@stripe/stripe-js": "^4.9.0",
         "@tanstack/react-query": "^5.59.16",
