--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
 REACT_APP_API_URL=http://localhost:8001/api
 REACT_APP_DEFAULT_COMPANY_ID=15
+API_PACKAGE_ID_CLASS_A=18
+API_PACKAGE_ID_CLASS_B=16
+API_PACKAGE_ID_CLASS_B_TO_A=17
+API_PACKAGE_ID_CLASS_NONE=15
