--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ REACT_APP_API_URL=http://localhost:8001/api
 #REACT_APP_DEFAULT_COMPANY_ID=22
 REACT_APP_DEFAULT_COMPANY_ID=15
 ANGULAR_CLIENT_URL=http://localhost:4200
+API_PACKAGE_ID_CLASS_A=18
+API_PACKAGE_ID_CLASS_B=16
+API_PACKAGE_ID_CLASS_B_TO_A=17
+API_PACKAGE_ID_CLASS_NONE=15
