--- a/package.json
+++ b/package.json
@@ -1,68 +1,70 @@
 {
-    "name": "cdl-powersuite",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@amplitude/analytics-browser": "^2.11.9",
-        "@emotion/react": "^11.13.3",
-        "@emotion/styled": "^11.13.0",
-        "@mui/icons-material": "^6.1.5",
-        "@mui/material": "^6.1.5",
-        "@mui/system": "^6.1.5",
-        "@mui/x-data-grid": "^7.21.0",
-        "@mui/x-date-pickers": "^7.22.0",
-        "@react-oauth/google": "^0.12.1",
-        "@sentry/react": "^8.40.0",
-        "@stripe/react-stripe-js": "^2.8.1",
-        "@stripe/stripe-js": "^4.9.0",
-        "@tanstack/react-query": "^5.59.16",
-        "@tanstack/react-query-devtools": "^5.60.6",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.115",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "@types/react-signature-canvas": "^1.0.6",
-        "axios": "^1.7.7",
-        "dayjs": "^1.11.13",
-        "formik": "^2.4.6",
-        "imask": "^7.6.1",
-        "jwt-decode": "^4.0.0",
-        "notistack": "^3.0.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-imask": "^7.6.1",
-        "react-router-dom": "^6.27.0",
-        "react-scripts": "5.0.1",
-        "react-signature-canvas": "^1.0.6",
-        "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4",
-        "yup": "^1.4.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "cdl-powersuite",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@amplitude/analytics-browser": "^2.11.9",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "@mui/system": "^6.1.5",
+    "@mui/x-data-grid": "^7.21.0",
+    "@mui/x-date-pickers": "^7.22.0",
+    "@react-oauth/google": "^0.12.1",
+    "@sentry/cli": "^2.39.0",
+    "@sentry/react": "^8.40.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.60.6",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.115",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-signature-canvas": "^1.0.6",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
+    "imask": "^7.6.1",
+    "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-imask": "^7.6.1",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.0.6",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build && npm run sentry:sourcemaps",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org cdl-powersuite --project registrations ./build && sentry-cli sourcemaps upload --org cdl-powersuite --project registrations ./build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
