--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,7 +122,7 @@ create release:
   stage: prepare-release
   image: registry.gitlab.com/gitlab-org/release-cli
   rules:
-    - if: $CI_COMMIT_REF_NAME == "master"
+    - if: $CI_COMMIT_REF_NAME == "main"
     - if: $CI_COMMIT_REF_NAME =~ /hotfix\/*/
   needs:
     - job: "trigger prod release"
