--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.4.6",
     "imask": "^7.6.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
