--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-oauth/google": "^0.12.1",
     "@sentry/cli": "^2.39.0",
     "@sentry/react": "^8.40.0",
-    "@stripe/react-stripe-js": "^2.8.1",
-    "@stripe/stripe-js": "^4.9.0",
+    "@stripe/react-stripe-js": "^3.8.1",
+    "@stripe/stripe-js": "^7.7.0",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.60.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -67,5 +67,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
